localization/v3.0.x/site/ru/home/home.md
---
id: home.md
---
<div class="doc-h1-wrapper">
<p><h1 class="title">
Добро пожаловать в Milvus Docs!</h1></p>
<p><h2 class="sub-title">
Здесь вы узнаете, что такое Milvus, а также как установить, использовать и развернуть Milvus для создания приложения в соответствии с потребностями вашего бизнеса.</h2></p>
</div>
<div class="doc-home-promotion-wrapper">
  <div class="promotion-content">
    <h2 class="promotion-title">Попробуйте управляемый Milvus бесплатно!</h2>
    <p class="promotion-desc">Zilliz Cloud - это отсутствие лишних хлопот, работа с Milvus и 10-кратная скорость.</p>
  </div>
  <div class="cta-wrapper">
   <a class="cta-global" href="https://cloud.zilliz.com/signup?utm_source=partner&utm_medium=referral&utm_campaign=2025-02-24_doc_home_milvus.io">Zilliz Cloud</a></div>
</div>
<h2 id="Get-Started" class="common-anchor-header">Начать<button data-href="#Get-Started" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h2><div class="card-wrapper">
<div class="start_card_container">
  
   <a href="/docs/ru/install_standalone-docker.md"> <img translate="no" src="https://milvus-docs.s3.us-west-2.amazonaws.com/assets/home_install.svg" alt="icon" />
   </a> <a href="/docs/ru/install_standalone-docker.md"> <p class="link-btn">Установить Milvus</p> </a><p>Узнайте, как установить Milvus с помощью Docker Compose или на Kubernetes.</p>
</div>
<div class="start_card_container">
  
   <a href="/docs/ru/quickstart.md"> <img translate="no" src="https://milvus-docs.s3.us-west-2.amazonaws.com/assets/home_quick_start.svg" alt="icon" />
   </a> <a href="/docs/ru/quickstart.md"> <p class="link-btn">Быстрый запуск</p> </a><p>Узнайте, как быстро запустить Milvus с помощью примеров кода.</p>
</div>
<div class="start_card_container">
  
   <a href="/bootcamp"> <img translate="no" src="https://milvus-docs.s3.us-west-2.amazonaws.com/assets/home_bootcamp.svg" alt="icon" />
   </a> <a href="/bootcamp"> <p class="link-btn">Bootcamp</p> </a><p>
  Узнайте, как создавать приложения для поиска векторного сходства с помощью Milvus.  </p>
</div>
</div>
<h2 id="Recommended-articles" class="common-anchor-header">Рекомендуемые статьи<button data-href="#Recommended-articles" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h2><div class="doc-home-recommend-section">
<div class="recomment-item">
  <p>Использование</p>
<ul>
<li><a href="/docs/ru/manage-collections.md">Управление коллекциями</a></li>
<li><a href="/docs/ru/insert-update-delete.md">Вставка, апсерт и удаление</a></li>
<li><a href="/docs/ru/single-vector-search.md">Одновекторный поиск</a></li>
<li><a href="/docs/ru/multi-vector-search.md">Гибридный поиск</a></li>
<li><a href="/docs/ru/get-and-scalar-query.md">Получение и скалярный запрос</a></li>
<li><a href="/docs/ru/milvus_for_agents.md">Milvus для агентов искусственного интеллекта</a></li>
</ul>
</div>
<div class="recomment-item">
  <p>Развертывание</p>
<ul>
<li><a href="/docs/ru/configure-docker.md">Настройка Milvus</a></li>
<li><a href="/docs/ru/deploy_s3.md">Управление зависимостями</a></li>
<li><a href="/docs/ru/eks.md">Развертывание в облаках</a></li>
<li><a href="/docs/ru/scaleout.md">Масштабирование кластера Milvus</a></li>
<li><a href="/docs/ru/monitor_overview.md">Мониторинг и оповещение</a></li>
</ul>
</div>
<div class="recomment-item">
  <p>Изучите</p>
<ul>
<li><a href="/docs/ru/system_configuration.md">Конфигурация системы</a></li>
<li><a href="/docs/ru/architecture_overview.md">Обзор архитектуры</a></li>
<li><a href="/docs/ru/index-explained.md">Объяснение индекса</a></li>
<li><a href="/docs/ru/metric.md">Метрики сходства</a></li>
<li><a href="/docs/ru/glossary.md">Глоссарий</a></li>
</ul>
</div>
</div>
<div class="doc-home-what-is-new">
<h2 id="Whats-new-in-docs" class="common-anchor-header">Что нового в документации<button data-href="#Whats-new-in-docs" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h2><p><em>Май 2026 - Обновления Milvus 3.0.x</em></p>
<ul>
<li>Добавлены основные <a href="/docs/ru/release_notes.md">сведения</a> о Milvus 3.0.x, включая внешние коллекции, моментальные снимки, хранилище V3 и интеграцию экосистемы озера.</li>
<li>Добавлено руководство по <a href="/docs/ru/single-vector-search.md#Sort-Search-Results-by-Scalar-Fields--Milvus-30x">сортировке результатов поиска по скалярным полям</a> и <a href="/docs/ru/get-and-scalar-query.md#Aggregate-Query-Results--Milvus-30x">агрегированию результатов запросов</a>.</li>
<li>Добавлено руководство по использованию <a href="/docs/ru/nullable-and-default.md">нулевых векторных полей</a> и <a href="/docs/ru/set-collection-ttl.md#Set-entity-level-TTL--Milvus-30x">TTL на уровне сущности</a>.</li>
<li>Добавлено руководство по использованию <a href="/docs/ru/minhash-function.md">функции MinHash Function</a> для подписей MinHash на стороне сервера.</li>
<li>Добавлено руководство по <a href="/docs/ru/search-with-embedding-lists.md">поиску с помощью вложенных списков</a> и <a href="/docs/ru/force-merge.md">принудительному уплотнению слияния</a>.</li>
</ul>
</div>
